--- a/ferret/Cargo.toml
+++ b/ferret/Cargo.toml
@@ -14,6 +14,7 @@ anyhow.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tokio.workspace = true
+colored.workspace = true
 
 [dev-dependencies]
 tokio-test = "0.4"
