--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 
-members = ["ferret", "ferret_server"]
+members = ["ferret", "scapi"]
 
 [workspace.package]
 version = "0.1.0"
@@ -24,6 +24,7 @@ thiserror = "1.0"
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+csv = "1.4"
 
 # Async runtime
 tokio = { version = "1.35", features = ["full"] }
@@ -34,6 +35,7 @@ futures = "0.3"
 # utils
 colored = "3.1"
 indicatif = "0.17"
+askama = { version = "0.12", features = ["serde-json"] }
 
 
 [profile.release]
