--- a/ferret/Cargo.toml
+++ b/ferret/Cargo.toml
@@ -15,6 +15,9 @@ serde.workspace = true
 serde_json.workspace = true
 tokio.workspace = true
 colored.workspace = true
+askama.workspace = true
+csv.workspace = true
+
 
 [dev-dependencies]
 tokio-test = "0.4"
