--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,9 @@ indicatif = "0.17"
 askama = { version = "0.12", features = ["serde-json"] }
 
 
+# wasm
+wasm-bindgen = "0.2"
+
 [profile.release]
 opt-level = 3
 lto = true
