--- a/ferret/Cargo.toml
+++ b/ferret/Cargo.toml
@@ -5,18 +5,37 @@ edition.workspace = true
 authors.workspace = true
 license.workspace = true
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
-reqwest.workspace = true
-tl.workspace = true
-quick-xml.workspace = true
-thiserror.workspace = true
-anyhow.workspace = true
-serde.workspace = true
-serde_json.workspace = true
-tokio.workspace = true
-colored.workspace = true
-askama.workspace = true
-csv.workspace = true
+quick-xml = "0.31"
+tl = { workspace = true }
+anyhow = { workspace = true }
+thiserror = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+csv = { workspace = true }
+askama = { workspace = true }
+reqwest = { workspace = true }
+wasm-bindgen = { workspace = true }
+colored = { workspace = true }
+tokio = { workspace = true, features = ["full"] }
+serde-wasm-bindgen = "0.6"
+console_error_panic_hook = "0.1"
+js-sys = "0.3"
+
+[dependencies.web-sys]
+version = "0.3"
+features = [
+    "Window",
+    "Document",
+    "Element",
+    "Node",
+    "HtmlElement",
+    "Text",
+    "console",
+]
 
 
 [dev-dependencies]
