Restore standard deps and fix CI headers

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y lld clang build-essential
+          sudo apt-get install -y lld clang build-essential gcc-multilib libc6-dev-i386
 
       - name: Install cargo-wasix
         run: |
