--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,7 @@ license = "MIT OR Apache-2.0"
 
 [workspace.dependencies]
 # HTTP client for URL fetching
-reqwest = { git = "https://github.com/wasix-org/reqwest.git", default-features = false, features = [
-    "blocking",
-    "rustls-tls",
-    "json",
-] }
+reqwest = "0.11"
 
 # XML/HTML Parsing
 quick-xml = "0.31" # For StreamAnalyzer (streaming parser)
@@ -31,15 +27,7 @@ serde_json = "1.0"
 csv = "1.4"
 
 # Async runtime
-tokio = { version = "=1.24.2", git = "https://github.com/wasix-org/tokio.git", branch = "epoll", default-features = false, features = [
-    "rt-multi-thread",
-    "macros",
-    "fs",
-    "io-util",
-    "net",
-    "signal",
-    "full",
-] }
+tokio = { version = "1.35", features = ["full"] }
 
 # For batch/concurrent operations
 futures = "0.3"
