Restore Wasix patches and downgrade Axum

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,11 @@ license = "MIT OR Apache-2.0"
 
 [workspace.dependencies]
 # HTTP client for URL fetching
-reqwest = "0.11"
+reqwest = { git = "https://github.com/wasix-org/reqwest.git", default-features = false, features = [
+    "blocking",
+    "rustls-tls",
+    "json",
+] }
 
 # XML/HTML Parsing
 quick-xml = "0.31" # For StreamAnalyzer (streaming parser)
@@ -27,7 +31,15 @@ serde_json = "1.0"
 csv = "1.4"
 
 # Async runtime
-tokio = { version = "1.35", features = ["full"] }
+tokio = { version = "=1.24.2", git = "https://github.com/wasix-org/tokio.git", branch = "epoll", default-features = false, features = [
+    "rt-multi-thread",
+    "macros",
+    "fs",
+    "io-util",
+    "net",
+    "signal",
+    "full",
+] }
 
 # For batch/concurrent operations
 futures = "0.3"
@@ -42,6 +54,12 @@ tower-http = { version = "0.4", features = ["cors", "trace"] }
 # wasm
 wasm-bindgen = "0.2"
 
+[patch.crates-io]
+socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.4.9" }
+tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll" }
+rustls = { git = "https://github.com/wasix-org/rustls.git", branch = "v0.21.5" }
+hyper = { git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.27" }
+ring = { git = "https://github.com/wasix-org/ring.git", branch = "wasix" }
 
 [profile.release]
 opt-level = 3
