Cargo.toml normalized

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,7 @@ license = "MIT OR Apache-2.0"
 
 [workspace.dependencies]
 # HTTP client for URL fetching
-reqwest = { git = "https://github.com/wasix-org/reqwest.git", default-features = false, features = [
-    "blocking",
-    "rustls-tls",
-    "json",
-] }
+reqwest = { version = "0.11", features = ["json"] }
 
 # XML/HTML Parsing
 quick-xml = "0.31" # For StreamAnalyzer (streaming parser)
@@ -31,15 +27,7 @@ serde_json = "1.0"
 csv = "1.4"
 
 # Async runtime
-tokio = { version = "=1.24.2", git = "https://github.com/wasix-org/tokio.git", branch = "epoll", default-features = false, features = [
-    "rt-multi-thread",
-    "macros",
-    "fs",
-    "io-util",
-    "net",
-    "signal",
-    "full",
-] }
+tokio = { version = "1.20.1", features = ["full"] }
 
 # For batch/concurrent operations
 futures = "0.3"
@@ -48,20 +36,11 @@ futures = "0.3"
 colored = "2"
 indicatif = "0.17"
 askama = { version = "0.12", features = ["serde-json"] }
-axum = { version = "0.6", features = ["macros"] }
+axum = { version = "0.6", features = ["tokio"] }
 tower-http = { version = "0.4", features = ["cors", "trace"] }
 
 # wasm
 wasm-bindgen = "0.2"
-
-[patch.crates-io]
-socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.4.9" }
-tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll" }
-rustls = { git = "https://github.com/wasix-org/rustls.git", branch = "v0.21.5" }
-hyper = { git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.27" }
-ring = { git = "https://github.com/wasix-org/ring.git", branch = "wasix" }
-rustls-webpki = { git = "https://github.com/wasix-org/webpki.git" }
-webpki-roots = { git = "https://github.com/wasix-org/webpki-roots.git" }
 
 [profile.release]
 opt-level = 3
