--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,10 @@ license = "MIT OR Apache-2.0"
 
 [workspace.dependencies]
 # HTTP client for URL fetching
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { git = "https://github.com/wasix-org/reqwest.git", default-features = false, features = [
+    "json",
+    "rustls-tls",
+] }
 
 # XML/HTML Parsing
 quick-xml = "0.31" # For StreamAnalyzer (streaming parser)
@@ -27,7 +30,17 @@ serde_json = "1.0"
 csv = "1.4"
 
 # Async runtime
-tokio = { version = "1.20.1", features = ["full"] }
+tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll", default-features = false, features = [
+    "rt-multi-thread",
+    "macros",
+    "fs",
+    "io-util",
+    "net",
+    "signal",
+] }
+hyper = { git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.27", features = [
+    "server",
+] }
 
 # For batch/concurrent operations
 futures = "0.3"
@@ -41,6 +54,14 @@ tower-http = { version = "0.4", features = ["cors", "trace"] }
 
 # wasm
 wasm-bindgen = "0.2"
+
+[patch.crates-io] # 👈🏼 Added section here
+socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.4.9" } # 👈🏼 Added line here
+libc = { git = "https://github.com/wasix-org/libc.git" }                          # 👈🏼 Added line here
+tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll" }      # 👈🏼 Added line here
+rustls = { git = "https://github.com/wasix-org/rustls.git", branch = "v0.21.5" }  # 👈🏼 Added line here
+hyper = { git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.27" }   # 👈🏼 Added line here
+
 
 [profile.release]
 opt-level = 3
