--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,11 +59,9 @@ wasm-bindgen = "0.2"
 socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.4.9" } # 👈🏼 Added line here
 libc = { git = "https://github.com/wasix-org/libc.git" }                          # 👈🏼 Added line here
 tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll" }      # 👈🏼 Added line here
-rustls = { git = "https://github.com/wasix-org/rustls.git", branch = "v0.21.5" }
+rustls = { git = "https://github.com/wasix-org/rustls.git", branch = "wasix" }
 hyper = { git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.27" }
 ring = { git = "https://github.com/wasix-org/ring.git", branch = "wasix" }
-rustls-webpki = { git = "https://github.com/wasix-org/webpki.git" }
-webpki-roots = { git = "https://github.com/wasix-org/webpki-roots.git" }
 
 
 [profile.release]
