--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,10 @@ license = "MIT OR Apache-2.0"
 
 [workspace.dependencies]
 # HTTP client for URL fetching
-reqwest = { git = "https://github.com/wasix-org/reqwest.git", default-features = false, features = [
+reqwest = { version = "0.11", default-features = false, features = [
     "json",
     "rustls-tls",
+    "blocking",
 ] }
 
 # XML/HTML Parsing
@@ -30,17 +31,7 @@ serde_json = "1.0"
 csv = "1.4"
 
 # Async runtime
-tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll", default-features = false, features = [
-    "rt-multi-thread",
-    "macros",
-    "fs",
-    "io-util",
-    "net",
-    "signal",
-] }
-hyper = { git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.27", features = [
-    "server",
-] }
+tokio = { version = "1.35", features = ["full"] }
 
 # For batch/concurrent operations
 futures = "0.3"
@@ -49,19 +40,11 @@ futures = "0.3"
 colored = "2"
 indicatif = "0.17"
 askama = { version = "0.12", features = ["serde-json"] }
-axum = { version = "0.6", features = ["tokio"] }
-tower-http = { version = "0.4", features = ["cors", "trace"] }
+axum = { version = "0.7", features = ["macros"] }
+tower-http = { version = "0.5", features = ["cors", "trace"] }
 
 # wasm
 wasm-bindgen = "0.2"
-
-[patch.crates-io] # 👈🏼 Added section here
-socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.4.9" } # 👈🏼 Added line here
-libc = { git = "https://github.com/wasix-org/libc.git" }                          # 👈🏼 Added line here
-tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll" }      # 👈🏼 Added line here
-rustls = { git = "https://github.com/wasix-org/rustls.git", branch = "wasix" }
-hyper = { git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.27" }
-ring = { git = "https://github.com/wasix-org/ring.git", branch = "wasix" }
 
 
 [profile.release]
