Use native GitHub Pages actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,11 +6,15 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   build-backend:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - uses: actions/checkout@v4
 
@@ -31,9 +35,10 @@ jobs:
 
   deploy-frontend:
     needs: build-backend
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
       - uses: actions/checkout@v4
 
@@ -49,11 +54,15 @@ jobs:
       - name: Build Frontend
         working-directory: frontend
         run: npm run build
-        # VITE_API_URL is left undefined here. 
-        # The frontend will fallback to its default (localhost:3000) or can be configured for a specific deployed backend later.
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: frontend/dist
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: frontend/dist
-          branch: gh-pages
+        id: deployment
+        uses: actions/deploy-pages@v4
